--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -1,15 +1,20 @@
 
 @media (max-width: (calc(28rem - 1px))) {
   header {
+    >.actions {
+      padding-inline-start: 0;
+    }
+
     >.logo {
-      >img {
-        &.full {
-          display: none;
-        }
-        &.small {
-          display: block;
-        }
-      }
+      padding-inline-end: 0;
+      // >img {
+      //   &.full {
+      //     display: none;
+      //   }
+      //   &.small {
+      //     display: block;
+      //   }
+      // }
     }
   }
 }
@@ -63,7 +68,7 @@
     padding: 1rem;
   }
 
-  #features {
+  #ciss {
     >p {
       padding-inline: 1rem;
     }
